src/objects/KPI_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Ave_Deal_Value__c</fullName>
        <label>Ave Deal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Business_Count__c</fullName>
        <label>New Business Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Business_Value__c</fullName>
        <label>New Business Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business__c</fullName>
        <formula>New_Business_Value__c/(New_Business_Value__c + Repeat_Business_Value__c)</formula>
        <label>% New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proactive_Count__c</fullName>
        <label>Proactive Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proactive_Value__c</fullName>
        <label>Proactive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proactive__c</fullName>
        <formula>Proactive_Value__c /(Proactive_Value__c + Reactive_Value__c)</formula>
        <label>% Proactive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reactive_Count__c</fullName>
        <label>Reactive Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reactive_Value__c</fullName>
        <label>Reactive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reactive__c</fullName>
        <formula>Reactive_Value__c /(Proactive_Value__c + Reactive_Value__c)</formula>
        <label>% Reactive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repeat_Business_Count__c</fullName>
        <label>Repeat Business Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeat_Business_Value__c</fullName>
        <label>Repeat Business Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repeat_Business__c</fullName>
        <formula>Repeat_Business_Value__c/(New_Business_Value__c + Repeat_Business_Value__c)</formula>
        <label>% Repeat Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>KPI Metrics</label>
    <nameField>
        <displayFormat>KPIM-{000000000}</displayFormat>
        <label>KPI Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>